Possible fix for iOS hero flicker

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -26,7 +26,7 @@ $color-text-secondary: $lightBlue;
 :root {
   --default-bg-color: #{$white};
   --section-alt-bg-color: #{$grayLight};
-  --hero-bg-color: #{$white};
+  --hero-bg-color: #{$grayLight};
   --hero-overlay-opacity: 0;
   --hero-heading-color: 0;
   --heading-color: #{$grayDark};
